config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Stackbit Fresh Theme",
+    "title": "Ulises GC",
     "path_prefix": "/",
     "layout_style": "overflow",
     "palette": "blue",
