--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,7 +1,7 @@
 {
     "title": "Ulises GC",
     "path_prefix": "/",
-    "layout_style": "overflow",
+    "layout_style": "simple",
     "palette": "blue",
     "header": {
         "title": "Stackbit Fresh",
