config.json: updated palette

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -2,7 +2,7 @@
     "title": "Ulises GC",
     "path_prefix": "/",
     "layout_style": "overflow",
-    "palette": "blue",
+    "palette": "green",
     "header": {
         "title": "Stackbit Fresh",
         "tagline": "Header Tagline",
