config.json: updated title in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -4,7 +4,7 @@
     "layout_style": "overflow",
     "palette": "green",
     "header": {
-        "title": "Stackbit Fresh",
+        "title": "Ulises GC",
         "tagline": "Header Tagline",
         "profile_img": "images/avatar.png",
         "profile_img_alt": "Author avatar",
