config.json: updated tagline in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -5,7 +5,7 @@
     "palette": "green",
     "header": {
         "title": "Ulises GC",
-        "tagline": "Header Tagline",
+        "tagline": "Community Manager ",
         "profile_img": "images/avatar.png",
         "profile_img_alt": "Author avatar",
         "background": "dark",
