--- a/content/data/config.json
+++ b/content/data/config.json
@@ -6,7 +6,7 @@
     "header": {
         "title": "Ulises GC",
         "tagline": "Community Manager / Diseñador Gráfico",
-        "profile_img": "/images/ulisesprofile2.svg",
+        "profile_img": "/images/redes sociales perfil.png",
         "profile_img_alt": "Author avatar",
         "background": "dark",
         "has_nav": true,
