config.json: updated profile_img_alt in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -7,7 +7,7 @@
         "title": "Ulises GC",
         "tagline": "Community Manager / Diseñador Gráfico",
         "profile_img": "/images/profile.svg",
-        "profile_img_alt": "Author avatar",
+        "profile_img_alt": "Ulises GC",
         "background": "dark",
         "has_nav": true,
         "nav_links": [
