config.json: updated background in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -8,7 +8,7 @@
         "tagline": "Community Manager / Diseñador Gráfico",
         "profile_img": "/images/profile.svg",
         "profile_img_alt": "Ulises GC",
-        "background": "dark",
+        "background": "light",
         "has_nav": true,
         "nav_links": [
             {
