config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -36,7 +36,7 @@
         "social_links": [
             {
                 "label": "Twitter",
-                "url": "https://twitter.com/",
+                "url": "https://twitter.com/UlisesGC_",
                 "style": "icon",
                 "icon_class": "twitter",
                 "new_window": true
