config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -43,7 +43,7 @@
             },
             {
                 "label": "Instagram",
-                "url": "https://www.instagram.com/",
+                "url": "https://www.instagram.com/ulisses.gc/",
                 "style": "icon",
                 "icon_class": "instagram",
                 "new_window": true
