--- a/content/data/config.json
+++ b/content/data/config.json
@@ -57,7 +57,7 @@
             },
             {
                 "label": "LinkedIn",
-                "url": "https://www.linkedin.com/",
+                "url": "https://www.linkedin.com/in/ulisesgc/",
                 "style": "icon",
                 "icon_class": "linkedin",
                 "new_window": true
