config.json: updated domain

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -67,5 +67,5 @@
     "footer": {
         "content": "&copy; ULISESGC. All rights reserved."
     },
-    "domain": "https://violet-potato-dd023.netlify.app"
+    "domain": "ulises.gc.com"
 }
